--- a/src/app.css
+++ b/src/app.css
@@ -30,6 +30,13 @@ textarea {
   text-align: center;
 }
 
+span, label, h1, h2, h3, p {
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
+
 .parent {
   width: 100%;
   height: 100%;
@@ -93,8 +100,9 @@ h1 {
   font-family: 'Ubuntu', sans-serif;
 }
 
-.steamUserId {
+.steamUserId, .steamUserId > span {
   font-size: 14px;
+  display: inline;
 }
 
 .generate {
@@ -184,6 +192,10 @@ button:disabled {
   margin-right: 16px;
 }
 
+.inviteLink > .blur {
+  filter: blur(3px);
+}
+
 .removeData {
   position: absolute;
   bottom: 12px;
@@ -269,6 +281,75 @@ button:disabled {
 .customFrame > .minimize:hover {
   background-color: rgba(79, 844, 92, 0.16);
   color: #dcddde;
+}
+
+.streamerMode {
+  position: absolute;
+  bottom: 8px;
+  left: 12px;
+}
+
+.streamerMode > span {
+  font-size: 16px;
+  display: inline;
+  margin: 0;
+}
+
+.streamerMode > input {
+	height: 0;
+	width: 0;
+	visibility: hidden;
+  margin: 0;
+  display: inline;
+}
+
+.streamerMode > label {
+	display: inline-flex;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 40px;
+  height: 20px;
+  margin: 0;
+  padding: 0;
+  background: grey;
+  border-radius: 100px;
+  position: relative;
+  transition: background-color .2s;
+}
+
+.streamerMode > label > span {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 4px;
+  width: 15px;
+  height: 15px;
+  margin: 0;
+  padding: 0;
+  border-radius: 45px;
+  transition: 0.2s;
+  background: #fff;
+  box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
+}
+
+.streamerMode > input:checked + label > span {
+	left: calc(100% - 4px);
+  transform: translateX(-100%);
+}
+
+.streamerMode > input:checked + label:after {
+	left: calc(100% - 5px);
+	transform: translateX(-100%);
+}
+
+.streamerMode > input:checked + label {
+  background-color: rgb(237, 66, 69);
+}
+
+.streamerMode > label:active span {
+	width: 22px;
 }
 
 .blur {
